--- a/src/components/Navbar/index.module.scss
+++ b/src/components/Navbar/index.module.scss
@@ -90,7 +90,7 @@
   height: 70%;
 
   @include down($breakpoint-lg) {
-    height: 70%;
+    height: 50%;
   }
 
   @include down($breakpoint-md) {
