--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -2,6 +2,7 @@ $text-primary: #000000;
 $text-alt: #ffffff;
 
 $text-size-hero: 7em;
+$text-size-hero-lg: 6em;
 $text-size-hero-md: 5em;
 $text-size-hero-sm: 3em;
 
